[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Objects/Camera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 0.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.5, 96 )

[node name="Cam" type="Node2D"]
script = ExtResource( 1 )

[node name="Up" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 160, 96 )

[node name="Cillision2d" type="CollisionShape2D" parent="Up"]
position = Vector2( 0, -96.5 )
shape = SubResource( 1 )

[node name="Down" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 160, 96 )

[node name="Cillision2d" type="CollisionShape2D" parent="Down"]
position = Vector2( 0, 96.5 )
shape = SubResource( 1 )

[node name="Left" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 160, 96 )

[node name="Cillision2d" type="CollisionShape2D" parent="Left"]
position = Vector2( -160.5, 0 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 160, 96 )

[node name="Cillision2d" type="CollisionShape2D" parent="Right"]
position = Vector2( 160.5, 0 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 96 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
[connection signal="body_entered" from="Up" to="." method="_on_Up_body_entered"]
[connection signal="body_entered" from="Down" to="." method="_on_Down_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
